fix responsiveness on small screens

--- a/src/components/molecules/GreetingSection/greeting-section.scss
+++ b/src/components/molecules/GreetingSection/greeting-section.scss
@@ -4,6 +4,7 @@
     gap: 20px;
     justify-content: space-between;
     margin-bottom: 72px;
+    min-width: 240px;
 
     &__hello-widget {
         order: 1;
